[project]
name = "grid-path-benchmark"
version = "1.0.0"
description = "Academic benchmark of search algorithms on 2D grids. Compares A*, BFS, DFS, Dijkstra, and Bidirectional Search across configurable grid scenarios with obstacles, terrain costs, and multiple heuristics."
readme = "README.md"
license = "MIT"
authors = [
    { name = "ahincho", email = "ahincho@unsa.edu.pe" }
]
requires-python = ">=3.14"
keywords = ["pathfinding", "grid", "astar", "benchmark", "search", "algorithms", "education", "heuristics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "search-library>=1.0.0",
    "colorama>=0.4.6",
]

[project.scripts]
grid-benchmark = "grid_path_benchmark.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grid_path_benchmark"]

[tool.setuptools.package-dir]
grid_path_benchmark = "src"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
